<resources>
    <string name="app_name">SmartHouse</string>

    <!-- Strings related to login -->
    <string name="welcome">Добро пожаловать</string>
    <string name="info_sign_in">Чтобы зайти, войдите или зарегистрируйтесь</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Слишком короткий логин</string>
    <string name="error_invalid_password">Слишком короткий пароль</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Необходимое поле</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about_email">Мы пошлем письмо на наш email для верификации аккаунта</string>
    <string name="about_password">Ваш пароль должен содержать минимум 8 символов</string>
    <string name="about_login">Ваш логин должен содержать минимум 6 символов</string>
    <string name="title_activity_rooms">Rooms</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_home">Добавить дом</string>
    <string name="info_no_home">Упс!\nЛокация не найдена</string>
    <string name="title_activity_test">Test</string>

    <string-array name="rooms">
        <item>Cпальня</item>
        <item>Гараж</item>
        <item>Ванная</item>
        <item>Туалет</item>
        <item>Кухня</item>
    </string-array>
</resources>
