<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marat.smarthouse.NoHome"
    android:padding="16dp">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_no_home"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_gravity="top"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/home_image"/>
    <ImageView
        android:id = "@+id/home_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat = "@drawable/home"
        android:layout_centerInParent="true"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Номер"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_above="@id/add_home_button"/>
    <Button
        android:id="@+id/add_home_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bigButtonSize"
        android:layout_marginBottom="10dp"
        android:height="@dimen/bigButtonSize"
        android:background="@drawable/big_button"
        android:text="@string/add_home"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
